insight-digibyte-ui

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "insight-lite-ui",
-  "description": "An open-source frontend for the Insight API. The Insight API provides you with a convenient, powerful and simple way to query and broadcast data on the litecoin network and build your own services with it.",
+  "name": "insight-digibyte-ui",
+  "description": "An open-source frontend for the Insight API. The Insight API provides you with a convenient, powerful and simple way to query and broadcast data on the digibyte network and build your own services with it.",
   "version": "0.4.6",
-  "repository": "git://github.com/litecoin-project/insight-lite-ui.git",
+  "repository": "git://github.com/digibyte/insight-digibyte-ui.git",
   "contributors": [
     {
       "name": "Matias Alejo Garcia",
@@ -28,17 +28,16 @@
   "bugs": {
     "url": "https://github.com/bitpay/insight-ui/issues"
   },
-  "homepage": "https://github.com/litecoin-project/insight-lite-ui",
+  "homepage": "https://github.com/digibyte/insight-digibyte-ui",
   "license": "MIT",
   "keywords": [
     "insight",
     "blockchain",
     "blockexplorer",
-    "litecoin",
-    "litecore",
+    "digibyte",
     "front-end"
   ],
-  "bitcoreNode": "litecore-node",
+  "bitcoreNode": "digibyte-node",
   "dependencies": {},
   "devDependencies": {
     "bower": "~1.2.8",
